airflow_docker/logs/dag_id=dag_with_postgres_operator_v02/run_id=scheduled__2023-12-10T00:00:00+00:00/task_id=insert_into_postgres_table/attempt=1.log
[2023-12-22T03:54:39.637+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v02.insert_into_postgres_table scheduled__2023-12-10T00:00:00+00:00 [queued]>
[2023-12-22T03:54:39.902+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v02.insert_into_postgres_table scheduled__2023-12-10T00:00:00+00:00 [queued]>
[2023-12-22T03:54:39.909+0000] {taskinstance.py:2171} INFO - Starting attempt 1 of 1
[2023-12-22T03:54:40.988+0000] {taskinstance.py:2192} INFO - Executing <Task(PostgresOperator): insert_into_postgres_table> on 2023-12-10 00:00:00+00:00
[2023-12-22T03:54:41.136+0000] {standard_task_runner.py:60} INFO - Started process 9350 to run task
[2023-12-22T03:54:41.148+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'dag_with_postgres_operator_v02', 'insert_into_postgres_table', 'scheduled__2023-12-10T00:00:00+00:00', '--job-id', '105', '--raw', '--subdir', 'DAGS_FOLDER/dag_with_postgres_operator.py', '--cfg-path', '/tmp/tmpxq72tup4']
[2023-12-22T03:54:41.519+0000] {standard_task_runner.py:88} INFO - Job 105: Subtask insert_into_postgres_table
[2023-12-22T03:54:43.283+0000] {task_command.py:423} INFO - Running <TaskInstance: dag_with_postgres_operator_v02.insert_into_postgres_table scheduled__2023-12-10T00:00:00+00:00 [running]> on host dd88aaafc1d9
[2023-12-22T03:54:45.463+0000] {taskinstance.py:2481} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='sarwar' AIRFLOW_CTX_DAG_ID='dag_with_postgres_operator_v02' AIRFLOW_CTX_TASK_ID='insert_into_postgres_table' AIRFLOW_CTX_EXECUTION_DATE='2023-12-10T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-12-10T00:00:00+00:00'
[2023-12-22T03:54:45.650+0000] {sql.py:276} INFO - Executing: 
            insert into dag_runs (dt, dag_id) values(<method 'date' of 'datetime.datetime' objects>, dag_with_postgres_operator_v02 )
        
[2023-12-22T03:54:45.908+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-12-22T03:54:46.147+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-12-22T03:54:46.301+0000] {sql.py:432} INFO - Running statement: 
            insert into dag_runs (dt, dag_id) values(<method 'date' of 'datetime.datetime' objects>, dag_with_postgres_operator_v02 )
        , parameters: None
[2023-12-22T03:54:46.602+0000] {taskinstance.py:2699} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 437, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "<"
LINE 2: ...         insert into dag_runs (dt, dag_id) values(<method 'd...
                                                             ^

[2023-12-22T03:54:47.018+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=dag_with_postgres_operator_v02, task_id=insert_into_postgres_table, execution_date=20231210T000000, start_date=20231222T035439, end_date=20231222T035447
[2023-12-22T03:54:47.683+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 105 for task insert_into_postgres_table (syntax error at or near "<"
LINE 2: ...         insert into dag_runs (dt, dag_id) values(<method 'd...
                                                             ^
; 9350)
[2023-12-22T03:54:48.285+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2023-12-22T03:54:48.660+0000] {taskinstance.py:3281} INFO - 0 downstream tasks scheduled from follow-on schedule check
